fix: increase mobile menu z-index to appear above popups (iOS)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,7 +783,7 @@ label {
   height: 100%;
   opacity: 0;
   visibility: hidden;
-  z-index: 99;
+  z-index: 99999;
   border-radius: 0px;
   transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -822,7 +822,7 @@ label {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 4;
+  z-index: 99998;
   transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
   -webkit-transition: all 0.3s linear;
@@ -847,7 +847,7 @@ label {
   overflow-x: hidden;
   background: #fff;
   padding: 0px 0px;
-  z-index: 5;
+  z-index: 100000;
   box-shadow: -9px 0 14px 0px rgb(0 0 0 / 6%);
 }
 .mobile-menu-visible .mobile-menu .menu-box {
